[gd_scene format=3 uid="uid://i1afhnqilliw"]

[ext_resource type="SpriteFrames" uid="uid://dkrccksyltqt4" path="res://entities/bacteria/Sprite_Frame_Bacteria_01.tres" id="1_084lk"]
[ext_resource type="Script" uid="uid://bgx63op0efc6f" path="res://entities/bacteria/smart_bacteria.gd" id="1_f6lps"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f6lps"]
radius = 23.021729

[sub_resource type="CircleShape2D" id="CircleShape2D_bn0wc"]
radius = 200.0

[node name="SmartBacteria" type="RigidBody2D" unique_id=328930080]
collision_mask = 4
script = ExtResource("1_f6lps")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=905439117]
modulate = Color(0.94509804, 0.56078434, 0.003921569, 1)
position = Vector2(0, -5)
sprite_frames = ExtResource("1_084lk")
animation = &"idle"
autoplay = "idle"
frame = 2
frame_progress = 0.35123092

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=275460738]
shape = SubResource("CircleShape2D_f6lps")

[node name="Sensing" type="Area2D" parent="." unique_id=907799644]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensing" unique_id=1783610032]
shape = SubResource("CircleShape2D_bn0wc")
debug_color = Color(0, 0.6509804, 0.16862746, 0.14509805)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Sensing" to="." method="_on_sensing_area_entered"]
[connection signal="area_exited" from="Sensing" to="." method="_on_sensing_area_exited"]
